Fix dark mode

--- a/src/components/Menus/Sidebar/SettingsPanel/FontSizeSelector/FontSizeSelector.scss
+++ b/src/components/Menus/Sidebar/SettingsPanel/FontSizeSelector/FontSizeSelector.scss
@@ -9,18 +9,19 @@
     &__icon {
       @include font-size-1(regular);
       border-radius: 5px;
-      background-color: $rpf-white;
-      outline: 2px solid $rpf-grey-150;
       display: block;
       width: 100%;
       margin-bottom: $space-0-75;
+      color: inherit;
 
       .--dark & {
         outline: 2px solid $rpf-white;
+        background-color: $rpf-grey-600;
       }
 
       .--light & {
         outline: 2px solid $rpf-grey-150;
+        background-color: $rpf-grey-50;
       }
 
       &--text {
