--- a/src/components/Menus/Sidebar/SettingsPanel/SettingsPanel.scss
+++ b/src/components/Menus/Sidebar/SettingsPanel/SettingsPanel.scss
@@ -3,7 +3,6 @@
 @import "../../../../colours.scss";
 
 .settings-panel {
-  color: $rpf-text-primary;
   font-family: sans-serif;
   padding: $space-0-5;
   margin-bottom: $space-0-5;
@@ -33,3 +32,14 @@
   }
 }
 
+.--light {
+  .settings-panel {
+    color: $rpf-text-primary;
+  }
+}
+
+.--dark {
+  .settings-panel {
+    color: $rpf-white;
+  }
+}
